# roboscope

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  claude.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  tmp.txt
backend/: .env.example  alembic.ini  pyproject.toml  start.sh
backend/demo/: example.resource  example.robot
backend/examples/tests/: basic_tests.roboscope  basic_tests.robot  browser_tests.robot  example.robot  requests_tests.robot  screenshot_tests.roboscope  screenshot_tests.robot  selenium_tests.robot
backend/migrations/: env.py
backend/migrations/versions/: 001_add_registry_urls.py  52b0837c0b7f_add_docker_image_built_at_and_packages_.py  9bf996e4380f_add_docker_build_status_and_docker_.py  a3c7e1f82d4b_add_docker_build_log_to_environments.py  b4d2e1a9c3f7_phase4_sso_and_teams.py  c0f1a9d2e4b8_flaky_quarantine.py  d5e8b2c1f7a3_environment_keyword_cache.py  e7c1a2b3d4f5_exec_advanced_config.py  f1a2b3c4d5e6_unique_env_pkg.py
backend/results/: log.html  output.xml  playwright-log.txt  report.html
backend/src/: celery_app.py  config.py  database.py  docker_client.py  encryption.py  logging_context.py  main.py  rate_limit.py  task_executor.py  utc_response.py
backend/src/ai/: __init__.py  encryption.py  llm_client.py  models.py  patch_apply.py  patch_extractor.py  prompts.py  rf_knowledge.py  rf_mcp_manager.py  router.py  schemas.py  service.py  tasks.py  xray_bridge.py
backend/src/audit/: event_types.py  middleware.py  models.py  retention.py  router.py  schemas.py  service.py
backend/src/auth/: client_ip.py  constants.py  dependencies.py  discovery_refresh.py  handoff_generator.py  idp_router.py  idp_service.py  models.py  oidc_callback_service.py  oidc_discovery.py  oidc_service.py  permissions.py  pii_hash.py  retention_cleanup.py  return_to.py  router.py  schemas.py  seen_groups.py  service.py  sso_link_consent.py  sso_rate_limit.py  sso_router.py
backend/src/debug/: __init__.py  dap_client.py  dap_protocol.py  output_xml_walker.py  prereq.py  robot_debug_session.py  router.py  schemas.py  session_manager.py  state_fetcher.py
backend/src/environments/: keyword_introspection.py  models.py  router.py  schemas.py  service.py  tasks.py  venv_utils.py
backend/src/execution/: diagnostics.py  models.py  resolver.py  router.py  schemas.py  service.py  tasks.py
backend/src/explorer/: library_mapping.py  router.py  schemas.py  service.py
backend/src/governance/: __init__.py  dependencies.py  flags.py  router.py  schemas.py
backend/src/plugins/: base.py  registry.py
backend/src/recording/: __init__.py  capture_script.py  context_menu_script.py  desktop_capture.py  desktop_recorder_task.py  desktop_selector_synthesis.py  generator.py  models.py  overlay_script.py  robot_emit.py  router.py  schemas.py  selector_schema.py  selector_synthesis.py  selector_verification.py  service.py  tasks.py  v2_command_queue.py  v2_payload_translator.py  v2_recorder_task.py  win32_input.py
backend/src/reports/: asset_tokens.py  models.py  parser.py  router.py  schemas.py  service.py  tasks.py
backend/src/repos/: models.py  router.py  schemas.py  service.py  tasks.py
backend/src/settings/: models.py  router.py  schemas.py  service.py
backend/src/stats/: analysis.py  keyword_library_map.py  models.py  router.py  schemas.py  service.py  tasks.py
backend/src/teams/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/webhooks/: models.py  router.py  schemas.py  service.py
backend/src/websocket/: manager.py
backend/tests/: conftest.py  test_boot_invariant.py  test_docker_client.py  test_health.py  test_logging_request_id.py  test_main.py  test_phase4_migration.py  test_task_executor.py  test_utc_response.py  test_vendored_rfheal_present.py  test_websocket_manager.py
backend/tests/ai/: test_ai_robustness.py  test_aix.py  test_encryption.py  test_generate_reverse_analyze.py  test_llm_client.py  test_patch_apply.py  test_patch_extractor.py  test_providers_router.py  test_rf_knowledge.py  test_rf_mcp_manager.py  test_router.py  test_xray_bridge.py
backend/tests/audit/: test_audit.py  test_encryption.py  test_event_types.py  test_retention.py
backend/tests/auth/: test_api_token_cap.py  test_client_ip.py  test_discovery_refresh.py  test_effective_role.py  test_effective_role_endpoints.py  test_handoff.py  test_idp_client_secret.py  test_idp_crud.py  test_idp_dry_run.py  test_login_group_sync.py  test_me_extension.py  test_password_change_required.py  test_pii_hash.py  test_public_settings.py  test_require_effective_role.py  test_retention_cleanup.py  test_return_to_validation.py  test_router.py  test_seen_groups.py  test_service.py  test_session_invariance.py  test_sso_callback.py  test_sso_initiation.py  test_sso_link_consent.py  test_sso_rate_limit.py  test_sso_rate_limit_router.py  test_sso_stub.py  test_tls_context.py  test_user_deactivation.py
backend/tests/debug/: test_dap_client.py  test_dap_protocol.py  test_output_xml_walker.py  test_prereq.py  test_robot_debug_session.py  test_router.py  test_router_integration.py  test_session_manager.py
backend/tests/environments/: test_browser_variants.py  test_keyword_introspection.py  test_offline_browser_pack.py  test_offline_browser_pack_integration.py  test_playwright_docker_tag.py  test_playwright_pin_compatibility.py  test_rfbrowser.py  test_router.py  test_service.py  test_tasks.py  test_vendored_heal_auto_install.py  test_venv_utils.py
backend/tests/execution/: test_advanced_run_audit.py  test_datadriver_available.py  test_diagnostics.py  test_docker_runner.py  test_error_hints.py  test_exec11_listeners.py  test_exec_flags_default_off.py  test_execute_test_run_branches.py  test_execution_robustness.py  test_heal_confidence_scale.py  test_heal_iframe_split.py  test_heal_patch_apply.py  test_heal_report_endpoint.py  test_heal_should_retry.py  test_modifier_registry.py  test_premigration_run_load.py  test_quarantine_listener.py  test_resolver_advanced.py  test_router.py  test_runner_interface_parity.py  test_runner_parity.py  (+4 more)
(+713 files in other folders)
