[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "roboscope-backend"
version = "0.1.0"
description = "RoboScope - Web-based Robot Framework Test Management Tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "gitpython>=3.1.43",
    "robotframework>=7.1",
    "websockets>=14.1",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
# PostgreSQL-Support (optional, Standard ist SQLite)
postgres = [
    "psycopg2-binary>=2.9.9",
]
# Docker-Runner (optional)
docker = [
    "docker>=7.1.0",
]
# Alle optionalen Abhängigkeiten
all = [
    "roboscope-backend[postgres,docker]",
]
dev = [
    "roboscope-backend[all]",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header", "fastapi.Path"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
