[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "roboscope-backend"
version = "0.9.0"
description = "RoboScope - Web-based Robot Framework Test Management Tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "greenlet>=3.1.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "PyJWT>=2.9.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "gitpython>=3.1.43",
    "robotframework>=7.1",
    "websockets>=14.1",
    "apscheduler>=3.10.4",
    "pyyaml>=6.0",
    "cryptography>=43.0.0",
    "colorama>=0.4",
    "robotframework-roboview>=0.0.4",
    "httpx>=0.28.0",
    "slowapi>=0.1.9",
    "python-json-logger>=3.0.0",
    "rf-mcp>=0.30.0",
    "fastmcp<3",
    "playwright>=1.49.0",
    "authlib>=1.6.10",
    "reportlab>=4.4.10",
    # XXE / billion-laughs hardening for any XML coming from
    # subprocess output (output.xml is built from user-authored .robot
    # tests, so external-entity references could exfiltrate files or
    # DoS the parser if we used stdlib ET directly).
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
# PostgreSQL-Support (optional, Standard ist SQLite)
postgres = [
    "psycopg2-binary>=2.9.9",
]
# Docker-Runner (optional)
docker = [
    "docker>=7.1.0",
]
# Alle optionalen Abhängigkeiten
all = [
    "roboscope-backend[postgres,docker]",
]
dev = [
    "roboscope-backend[all]",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: requires an installed playwright chromium browser; opt-in via -m integration",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# Mark FastAPI dependency-injection helpers as immutable so the
# B008 rule ("Do not perform function call in argument defaults")
# doesn't fire on every router signature. Nested under
# flake8-bugbear because ruff 0.15+ rejects this option at the
# top-level [tool.ruff.lint] section (the older flat form silently
# broke `make lint` until this was moved).
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    # Project-local role-gating factories called inside `Depends(...)`
    # — they construct a dependency callable, evaluating them at
    # function-definition time is the intended pattern.
    "src.auth.dependencies.require_role",
    "src.auth.dependencies.require_effective_role",
    "src.auth.dependencies.require_effective_role_for_run",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
# Pytest fixture pattern: import a fixture for discovery, then use
# its name as a function parameter. Ruff sees the parameter as a
# "redefinition" (F811) of the imported name even though the import
# uses `# noqa: F401`. F811 is a real bug-class in production code,
# so we silence it ONLY in tests/.
"tests/**" = ["F811"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
